# crchecker

./: .gitignore  .gitmodules  COPYING  README.md  meson.build  meson_options.txt
doc/: benchmark.txt
src/: constants.hpp  main.cpp  util.cpp  util.hpp
subprojects/: checkarg
tests/: meson.build  test_crc_calculation.cpp  test_filename_parser.cpp
